kube/afterparty-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afterparty
spec:
  selector:
    matchLabels:
      app: afterparty
  replicas: 1
  template:
    metadata:
      labels:
        app: afterparty
    spec:
      containers:
      - name: afterparty
        image: dokun1/afterparty-server-testing:sha-dfkighk
        ports:
        - containerPort: 8080
