kube/afterparty-staging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afterparty-staging
spec:
  selector:
    matchLabels:
      app: afterparty-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: afterparty-staging
    spec:
      containers:
      - name: afterparty
        image: dokun1/afterparty-server-testing:staging
        ports:
        - containerPort: 8080
