kube/afterparty-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: afterparty
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: afterparty
