kube/afterparty-staging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: afterparty-staging
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: afterparty-staging
