kube/afterparty-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: afterparty-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.afterparty.tech
    - api.staging.afterparty.tech
    secretName: afterparty-api-tls
  rules:
  - host: api.afterparty.tech
    http:
      paths:
      - backend:
          serviceName: afterparty
          servicePort: 80
  - host: api.staging.afterparty.tech
    http:
      paths:
      - backend:
          serviceName: afterparty-staging
          servicePort: 80
