kube/afterparty-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: afterparty-prometheus-ingress
  namespace: prometheus-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - grafana.afterparty.tech
    secretName: afterparty-api-tls
  rules:
  - host: grafana.afterparty.tech
    http:
      paths:
      - backend:
          serviceName: prometheus-operator-grafana
          servicePort: 3000
